--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,20 @@
-version: '2'
+version: '3'
 services:
-  angular-social:
-    container_name: angular-social
-    build: .
+  bettor-league-client:
+#    container_name: bettor-league-client
+    image: nadjim/bettor-league-client
+#    build: .
     ports:
-      - "80:80"
+      - "8070:80"
+    networks:
+      - bettor-league-network
+    labels:
+      - "traefik.backend=bettor-league-client"
+      - "traefik.docker.network=bettor-league-network"
+      - "traefik.enable=true"
+      - "traefik.frontend.rule=Host:web.bettorleague.ovh"
+      - "traefik.port=80"
+
+networks:
+  bettor-league-network:
+    external: true
