--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '2'
+version: '3'
 services:
-  angular-social:
-    container_name: angular-social
+  bettor-league-client:
+    container_name: bettor-league-client
     build: .
     ports:
       - "80:80"
