--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-social",
+  "name": "bettor-league-client",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -24,8 +24,11 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "ngx-drag-scroll": "^7.3.1",
+    "net": "^1.0.2",
+    "ngx-drag-scroll": "^7.4.2",
     "rxjs": "~6.3.3",
+    "sockjs-client": "^1.1.4",
+    "stompjs": "^2.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
