--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "2.24.0",
     "net": "^1.0.2",
     "ngx-drag-scroll": "^7.4.2",
     "rxjs": "~6.3.3",
