--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@swimlane/ngx-charts": "11.1.0",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "moment": "2.24.0",
     "net": "^1.0.2",
+    "ng2-charts": "^2.2.3",
     "ngx-drag-scroll": "^7.4.2",
     "rxjs": "~6.3.3",
     "sockjs-client": "^1.1.4",
